--- a/04-multimodal/.env.example
+++ b/04-multimodal/.env.example
@@ -1,10 +1,10 @@
 ﻿# Telegram Bot Token
-# РџРѕР»СѓС‡РёС‚СЊ РјРѕР¶РЅРѕ Сѓ @BotFather РІ Telegram
-TELEGRAM_TOKEN=8215457986:AAE-PjqvdSOOYCpbj6pEeDg1PPIaHa-yJzE
+# Get it from @BotFather in Telegram
+TELEGRAM_TOKEN=your_telegram_bot_token_here
 
 # OpenRouter API Key
-# РџРѕР»СѓС‡РёС‚СЊ РјРѕР¶РЅРѕ РЅР° https://openrouter.ai/
+# Get it from https://openrouter.ai/
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
-# LLM Model (РѕРїС†РёРѕРЅР°Р»СЊРЅРѕ, РїРѕ СѓРјРѕР»С‡Р°РЅРёСЋ claude-3.5-sonnet)
+# LLM Model (optional, default is claude-3.5-sonnet)
 LLM_MODEL=anthropic/claude-3.5-sonnet
