--- a/04-multimodal/.env.example
+++ b/04-multimodal/.env.example
@@ -7,4 +7,4 @@ TELEGRAM_TOKEN=your_telegram_bot_token_here
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # LLM Model (optional, default is claude-3.5-sonnet)
-LLM_MODEL=anthropic/claude-3.5-sonnet
+LLM_MODEL=deepseek/deepseek-chat-v3.1:free
