﻿Feature: РџРѕРґРґРµСЂР¶РєР° Р»РѕРєР°Р»СЊРЅРѕР№ Ollama Рё РѕР±СЂР°Р±РѕС‚РєР° РёР·РѕР±СЂР°Р¶РµРЅРёР№
Р”РѕР±Р°РІР»РµРЅР° РјСѓР»СЊС‚РёРјРѕРґР°Р»СЊРЅР°СЏ РїРѕРґРґРµСЂР¶РєР°:
- РђРІС‚РѕРјР°С‚РёС‡РµСЃРєРѕРµ РїРµСЂРµРєР»СЋС‡РµРЅРёРµ РјРµР¶РґСѓ OpenRouter Рё Р»РѕРєР°Р»СЊРЅРѕР№ Ollama
- РџР°СЂР°РјРµС‚СЂС‹ OPENAI_BASE_URL, MODEL_TEXT, MODEL_IMAGE
- РћР±СЂР°Р±РѕС‚РєР° С„РѕС‚Рѕ С‡РµРєРѕРІ С‡РµСЂРµР· vision РјРѕРґРµР»СЊ (qwen3-vl:8b-instruct)
- РР·РІР»РµС‡РµРЅРёРµ С‚СЂР°РЅР·Р°РєС†РёР№ РёР· РёР·РѕР±СЂР°Р¶РµРЅРёР№
- РЎРєР°С‡РёРІР°РЅРёРµ Рё РєРѕРґРёСЂРѕРІР°РЅРёРµ С„РѕС‚Рѕ РІ base64
- РћР±РЅРѕРІР»РµРЅ .env.example СЃ РїСЂРёРјРµСЂР°РјРё РєРѕРЅС„РёРіСѓСЂР°С†РёРё
- РћР±РЅРѕРІР»РµРЅ README СЃ РёРЅСЃС‚СЂСѓРєС†РёСЏРјРё РїРѕ РЅР°СЃС‚СЂРѕР№РєРµ
- Р›РѕРіРёСЂРѕРІР°РЅРёРµ С‚РёРїР° РёСЃРїРѕР»СЊР·СѓРµРјРѕРіРѕ РїСЂРѕРІР°Р№РґРµСЂР°

РњРѕРґРµР»Рё РЅР° СЃРµСЂРІРµСЂРµ:
- gpt-oss:20b (13 GB) - С‚РµРєСЃС‚
- qwen3-vl:8b-instruct (6.1 GB) - vision
- qwen2.5:7b-instruct (4.7 GB)
- llama3.2:1b (1.3 GB)

--- a/04-multimodal/.env.example
+++ b/04-multimodal/.env.example
@@ -2,9 +2,14 @@
 # Get it from @BotFather in Telegram
 TELEGRAM_TOKEN=your_telegram_bot_token_here
 
-# OpenRouter API Key
-# Get it from https://openrouter.ai/
-OPENROUTER_API_KEY=your_openrouter_api_key_here
+# === Option 1: OpenRouter (Cloud) ===
+# Uncomment to use OpenRouter
+# OPENROUTER_API_KEY=your_openrouter_api_key_here
+# LLM_MODEL=google/gemini-2.0-flash-exp:free
 
-# LLM Model (optional, default is claude-3.5-sonnet)
-LLM_MODEL=deepseek/deepseek-chat-v3.1:free
+# === Option 2: Local Ollama (Recommended) ===
+# Uncomment to use local Ollama
+OPENAI_API_KEY=ollama
+OPENAI_BASE_URL=http://195.209.210.250:11434/v1
+MODEL_TEXT=gpt-oss:20b
+MODEL_IMAGE=qwen3-vl:8b-instruct
