﻿Feature: РўСЂР°РЅСЃРєСЂРёР±Р°С†РёСЏ РіРѕР»РѕСЃРѕРІС‹С… СЃРѕРѕР±С‰РµРЅРёР№ С‡РµСЂРµР· Whisper API
Р”РѕР±Р°РІР»РµРЅР° РїРѕРґРґРµСЂР¶РєР° РіРѕР»РѕСЃРѕРІС‹С… СЃРѕРѕР±С‰РµРЅРёР№:
- РҐСЌРЅРґР»РµСЂ РґР»СЏ РіРѕР»РѕСЃРѕРІС‹С… СЃРѕРѕР±С‰РµРЅРёР№ (message.voice)
- РРЅС‚РµРіСЂР°С†РёСЏ СЃ OpenAI Whisper API РґР»СЏ С‚СЂР°РЅСЃРєСЂРёР±Р°С†РёРё
- РЎРєР°С‡РёРІР°РЅРёРµ .ogg С„Р°Р№Р»РѕРІ РёР· Telegram
- Р Р°СЃРїРѕР·РЅР°РІР°РЅРёРµ СЂСѓСЃСЃРєРѕРіРѕ СЏР·С‹РєР°
- РћР±СЂР°Р±РѕС‚РєР° С‚СЂР°РЅСЃРєСЂРёРїС†РёРё С‡РµСЂРµР· СЃСѓС‰РµСЃС‚РІСѓСЋС‰РёР№ call_llm()
- РћС‚РѕР±СЂР°Р¶РµРЅРёРµ СЂР°СЃРїРѕР·РЅР°РЅРЅРѕРіРѕ С‚РµРєСЃС‚Р° РїРѕР»СЊР·РѕРІР°С‚РµР»СЋ
- РЎС‚Р°С‚СѓСЃРЅРѕРµ СЃРѕРѕР±С‰РµРЅРёРµ "Р Р°СЃРїРѕР·РЅР°СЋ..." СЃ Р°РІС‚РѕСѓРґР°Р»РµРЅРёРµРј
- Fallback РЅР° OPENROUTER_API_KEY РµСЃР»Рё WHISPER_API_KEY РЅРµ СѓРєР°Р·Р°РЅ
- РћР±РЅРѕРІР»РµРЅС‹ РєРѕРјР°РЅРґС‹ /start Рё /help
- РћР±РЅРѕРІР»РµРЅ README СЃ РїСЂРёРјРµСЂР°РјРё РіРѕР»РѕСЃРѕРІС‹С…
- РћР±РЅРѕРІР»РµРЅ .env.example СЃ WHISPER_API_KEY

РўРµРїРµСЂСЊ Р±РѕС‚ РїРѕРґРґРµСЂР¶РёРІР°РµС‚ 3 С‚РёРїР° РІРІРѕРґР°:
- рџ’¬ РўРµРєСЃС‚РѕРІС‹Рµ СЃРѕРѕР±С‰РµРЅРёСЏ
- рџЋ¤ Р“РѕР»РѕСЃРѕРІС‹Рµ СЃРѕРѕР±С‰РµРЅРёСЏ
- рџ“ё Р¤РѕС‚Рѕ С‡РµРєРѕРІ

--- a/04-multimodal/.env.example
+++ b/04-multimodal/.env.example
@@ -13,3 +13,8 @@ OPENAI_API_KEY=ollama
 OPENAI_BASE_URL=http://195.209.210.250:11434/v1
 MODEL_TEXT=gpt-oss:20b
 MODEL_IMAGE=qwen3-vl:8b-instruct
+
+# === Whisper API for Voice Transcription (Optional) ===
+# Get it from https://platform.openai.com/api-keys
+# If not set, will try to use OPENROUTER_API_KEY
+WHISPER_API_KEY=your_openai_api_key_for_whisper
