--- a/04-multimodal/pyproject.toml
+++ b/04-multimodal/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aiogram>=3.0.0",
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
+    "requests>=2.32.5",
 ]
 
 [build-system]
