--- a/04-multimodal/.env.example
+++ b/04-multimodal/.env.example
@@ -14,7 +14,10 @@ OPENAI_BASE_URL=http://195.209.210.250:11434/v1
 MODEL_TEXT=gpt-oss:20b
 MODEL_IMAGE=qwen3-vl:8b-instruct
 
-# === Whisper API for Voice Transcription (Optional) ===
+# === Whisper for Voice Transcription (Optional) ===
+# Option 1: Local faster-whisper service (Recommended, Free!)
+WHISPER_LOCAL_URL=http://195.209.210.250:5000
+
+# Option 2: OpenAI Whisper API (if not using local)
 # Get it from https://platform.openai.com/api-keys
-# If not set, will try to use OPENROUTER_API_KEY
-WHISPER_API_KEY=your_openai_api_key_for_whisper
+# WHISPER_API_KEY=your_openai_api_key_for_whisper
